# app

./: .gitignore  README-TAURI.md  changes-log.md  generate-icons.sh  index.html  package.json  plan.md
.github/skills/cleancommitmsg/: SKILL.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
